syntax = "proto3";

option csharp_namespace = "Tony.Shared.Protos";

package Navigator;
service NavigatorEndpoint {
  rpc GetCategoryById (GetCategoryByIdRequest) returns (GetCategoryByIdResponse);
  //rpc GetFlatsByCategoryId (GetFlatsByCategoryIdRequest) returns (GetFlatsByCategoryIdResponse);
  rpc GetNavigatorCategoriesByParentId (GetNavigatorCategoriesByParentIdRequest) returns (GetNavigatorCategoriesByParentIdResponse);
}

message GetCategoryByIdRequest {
	int32 Id = 1;
}

message GetCategoryByIdResponse {
	int32 Id = 1;
	int32 ParentId = 2;
	string Name = 3;
	bool IsNode = 4;
	bool IsPublicSpace = 5;
	bool IsTradingAllowed = 6;
	int32 MinAccess = 7;
	int32 MinAssign = 8;
}

message GetNavigatorCategoriesByParentIdRequest {
	int32 ParentId = 1;
}

message GetNavigatorCategoriesByParentIdResponse {
	repeated GetCategoryByIdResponse Categories = 1;
}